# contract

./: .env.example  .gitignore  CA1.md  CA2.md  CA3.md  Cargo.toml  README.md  deployed_contracts_testnet.txt  skills-lock.json
.claude/: settings.local.json
contracts/bounty_registry/: Cargo.toml
contracts/bounty_registry/src/: contract.rs  error.rs  lib.rs
contracts/bounty_registry/src/events/: mod.rs
contracts/bounty_registry/src/storage/: mod.rs
contracts/bounty_registry/src/tests/: mod.rs
contracts/bounty_registry/test_snapshots/test/: test_bounty_cancellation_and_rejection.1.json  test_bounty_lifecycle.1.json  test_bounty_update.1.json
contracts/bounty_registry/test_snapshots/tests/: test_application_flow.1.json  test_bounty_cancellation.1.json  test_bounty_lifecycle.1.json  test_cancel_bounty_restores_credits.1.json  test_contest_flow.1.json  test_create_bounty.1.json  test_fcfs_flow.1.json  test_reject_application_restores_credit.1.json  test_split_flow.1.json  test_update_bounty.1.json
contracts/core_escrow/: Cargo.toml
contracts/core_escrow/src/: contract.rs  error.rs  lib.rs
contracts/core_escrow/src/events/: mod.rs
contracts/core_escrow/src/storage/: mod.rs
contracts/core_escrow/src/tests/: mod.rs
contracts/core_escrow/test_snapshots/tests/: test_calculate_fee_preview.1.json  test_create_pool_and_lock.1.json  test_define_and_release_slots.1.json  test_init_and_queries.1.json  test_initialize_and_create_pool.1.json  test_insurance_claim.1.json  test_pause_resume_routing.1.json  test_refund_all.1.json  test_refund_backers.1.json  test_release_partial.1.json  test_route_deposit_with_fees.1.json  test_route_pledge_fee_on_top.1.json  test_set_fee_rate.1.json
contracts/crowdfund_registry/: Cargo.toml
contracts/crowdfund_registry/src/: contract.rs  error.rs  lib.rs
contracts/crowdfund_registry/src/events/: mod.rs
contracts/crowdfund_registry/src/storage/: mod.rs
contracts/crowdfund_registry/src/tests/: mod.rs
contracts/crowdfund_registry/test_snapshots/test/: test_crowdfund_full_lifecycle.1.json  test_refund_fails_if_funded.1.json
contracts/crowdfund_registry/test_snapshots/tests/: test_cancel_campaign.1.json  test_create_and_submit_campaign.1.json  test_create_campaign.1.json  test_failed_campaign_refund.1.json  test_full_lifecycle.1.json  test_governance_flow.1.json  test_invalid_milestones_rejected.1.json  test_overdue_creator_submits_during_grace_period.1.json  test_overdue_escalate_not_flagged_fails.1.json  test_overdue_flag_and_escalate.1.json  test_owner_cancel_after_funded_fails.1.json  test_owner_cancel_in_campaigning_with_refunds.1.json  test_owner_cancel_in_draft.1.json  test_reject_campaign.1.json  test_reject_milestone.1.json  test_resolve_dispute_approve_backer.1.json  test_resolve_dispute_approve_creator.1.json  test_resolve_dispute_not_disputed_fails.1.json  test_update_campaign.1.json  test_vote_expired_without_quorum_returns_to_draft.1.json  test_vote_reject_returns_to_draft.1.json  test_vote_threshold_not_met_while_active.1.json
contracts/governance_voting/: Cargo.toml
contracts/governance_voting/src/: contract.rs  error.rs  lib.rs
contracts/governance_voting/src/events/: mod.rs
contracts/governance_voting/src/storage/: mod.rs
contracts/governance_voting/src/tests/: mod.rs
contracts/governance_voting/test_snapshots/test/: test_qf_logic.1.json
contracts/governance_voting/test_snapshots/tests/: test_cancel_session.1.json  test_conclude_session.1.json  test_double_vote_rejected.1.json  test_qf_logic.1.json  test_voting_flow.1.json
contracts/grant_hub/: Cargo.toml
contracts/grant_hub/src/: contract.rs  error.rs  lib.rs
contracts/grant_hub/src/events/: mod.rs
contracts/grant_hub/src/storage/: mod.rs
contracts/grant_hub/src/tests/: mod.rs
contracts/grant_hub/test_snapshots/test/: test_milestone_grant_lifecycle.1.json  test_qf_round_lifecycle.1.json  test_retrospective_grant_lifecycle.1.json
contracts/grant_hub/test_snapshots/tests/: test_milestone_grant_lifecycle.1.json  test_qf_round.1.json  test_qf_round_lifecycle.1.json  test_retrospective_grant.1.json  test_retrospective_grant_lifecycle.1.json
contracts/hackathon_registry/: Cargo.toml
contracts/hackathon_registry/src/: contract.rs  error.rs  lib.rs
contracts/hackathon_registry/src/events/: mod.rs
contracts/hackathon_registry/src/storage/: mod.rs
contracts/hackathon_registry/src/tests/: mod.rs
contracts/hackathon_registry/test_snapshots/test/: test_hackathon_full_lifecycle.1.json  test_hackathon_v2_full_lifecycle.1.json
contracts/hackathon_registry/test_snapshots/tests/: test_cancel_hackathon.1.json  test_create_hackathon.1.json  test_disqualify_submission.1.json  test_full_lifecycle.1.json  test_hackathon_v2_full_lifecycle.1.json
contracts/project_registry/: Cargo.toml
contracts/project_registry/src/: contract.rs  error.rs  lib.rs
contracts/project_registry/src/events/: mod.rs
contracts/project_registry/src/storage/: mod.rs
contracts/project_registry/src/tests/: mod.rs
contracts/project_registry/test_snapshots/test/: test_project_lifecycle.1.json  test_register_and_deposit.1.json  test_unauthorized_stats_update.1.json
contracts/project_registry/test_snapshots/tests/: test_project_lifecycle.1.json  test_register_and_query.1.json  test_suspend_project.1.json  test_validate_budget.1.json  test_verification_upgrade.1.json  test_warning_escalation.1.json
scripts/: deploy.sh  upgrade.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  setup.rs  test_bounty_e2e.rs  test_cross_module.rs  test_crowdfund_e2e.rs  test_edge_cases.rs  test_grant_e2e.rs  test_hackathon_e2e.rs  test_new_features.rs
tests/integration/test_snapshots/test_bounty_e2e/: test_application_flow_with_credit_restore.1.json  test_bounty_escrow_pool_created_correctly.1.json  test_cancel_bounty_refunds_escrow_and_credits.1.json  test_contest_multi_winner.1.json  test_fcfs_full_lifecycle.1.json  test_fee_routing_on_bounty_creation.1.json  test_reject_application_restores_credit.1.json  test_split_bounty_multi_contributor.1.json
(+103 files in other folders)
