[workspace]
resolver = "2"
members = [
  "contracts/core_escrow",
  "contracts/payment_router",
  "contracts/project_registry",
  "contracts/reputation_registry",
  "contracts/governance_voting",
  "contracts/bounty_registry", "contracts/hackathon_registry", "contracts/crowdfund_registry", "contracts/grant_hub",
]

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
