[workspace]
resolver = "2"
members = [
  "packages/boundless-types",
  "contracts/core_escrow",
  "contracts/reputation_registry",
  "contracts/governance_voting",
  "contracts/project_registry",
  "contracts/bounty_registry",
  "contracts/crowdfund_registry",
  "contracts/grant_hub",
  "contracts/hackathon_registry",
  "contracts/smart_wallet",
  "contracts/smart_wallet_factory",
]

[workspace.dependencies]
soroban-sdk = "25"
boundless-types = { path = "packages/boundless-types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
