[package]
name = "bounty_registry"
version = "0.0.0"
authors = ["Collins <collins@boundlessfi.xyz>"]
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
boundless-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
core_escrow = { path = "../core_escrow" }
reputation_registry = { path = "../reputation_registry" }
