[package]
name = "core_escrow"
authors = ["Collins <collins@boundlessfi.xyz>"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
boundless-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
