[package]
name = "crowdfund_registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
core_escrow = { path = "../core_escrow" }
payment_router = { path = "../payment_router" }
reputation_registry = { path = "../reputation_registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
