[package]
name = "crowdfund_registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
boundless-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
core_escrow = { path = "../core_escrow" }
governance_voting = { path = "../governance_voting" }
reputation_registry = { path = "../reputation_registry" }
