[package]
name = "governance_voting"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
reputation_registry = { path = "../reputation_registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
