[package]
name = "hackathon-registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
core_escrow = { path = "../core_escrow" }
reputation_registry = { path = "../reputation_registry" }
project_registry = { path = "../project_registry" }
governance_voting = { path = "../governance_voting" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
